@@ -1,5 +1,11 @@
 2002-04-21  Jason Thorpe  <thorpej@wasabisystems.com>
 
+	* alpha-tdep.c (alpha_gdbarch_init): Set coerce_float_to_double
+	to standard_coerce_float_to_double.
+	* config/alpha/tm-alpha.h (COERCE_FLOAT_TO_DOUBLE): Remove.
+
+2002-04-21  Jason Thorpe  <thorpej@wasabisystems.com>
+
 	* alpha-tdep.h (gdbarch_tdep): Add vm_min_address member.
 	* alpha-tdep.c (heuristic_proc_start): Use vm_min_address
 	from gdbarch_tdep rather than a constant.
